# multi_xg_control

./: READEME.md  README.md
mc_sdk_node-main/scripts/: mc-sdk.service  start_mc_sdk.sh
mc_sdk_node-main/src/mc_sdk_client/: CMakeLists.txt  package.xml
mc_sdk_node-main/src/mc_sdk_client/include/: mc_sdk_node.h
mc_sdk_node-main/src/mc_sdk_client/launch/: mc_sdk_node.launch.py
mc_sdk_node-main/src/mc_sdk_client/src/: main.cpp  mc_sdk_node.cpp
mc_sdk_node-main/src/mc_sdk_rosmsgs/: package.xml
mc_sdk_node-main/src/mc_sdk_rosmsgs/msg/: HighLevelCmd.msg  HighLevelRobotState.msg
mc_sdk_ros-main/: README.md
mc_sdk_ros-main/scripts/: Modify_files.sh  start_xg_nodes.sh
mc_sdk_ros-main/src/mc_sdk_demo/: CMakeLists.txt  package.xml
mc_sdk_ros-main/src/mc_sdk_demo/include/: highlevel_client.h  highlevel_ros_demo.h
mc_sdk_ros-main/src/mc_sdk_demo/launch/: mc_sdk_ros.launch.py
mc_sdk_ros-main/src/mc_sdk_demo/src/: highlevel_client.cpp  highlevel_ros_demo.cpp  keyboard_teleop.cpp  main.cpp
mc_sdk_ros-main/src/mc_sdk_ros_msg/: package.xml
mc_sdk_ros-main/src/mc_sdk_ros_msg/msg/: HighLevelRobotState.msg
